syntax = "proto3";
package defundlabs.defund.etf;

import "gogoproto/gogo.proto";
import "cosmos/base/v1beta1/coin.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/defund-labs/defund/x/etf/types";

message Balances {
  string address = 1;
  repeated cosmos.base.v1beta1.Coin balances = 2;
}

// balances are named by broker id for each supported broker
message FundBalances {
  Balances osmosis = 1 [
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"osmosis\""
  ];
}

message BaseDenom {
  string onDefund = 1 [
		(gogoproto.jsontag) = "on_defund"
	];
  string onBroker = 2 [
		(gogoproto.jsontag) = "on_broker"
	];
}

message FundPrice {
  string id = 1;
  int64 height = 2;
  google.protobuf.Timestamp time = 3 [
    (gogoproto.stdtime) = true,
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"time\""
  ];
  cosmos.base.v1beta1.Coin amount = 4;
  string symbol = 5;
}

message Holding {
  string token = 1;
  int64 percent = 2;
  // Pool ID of the Pool for this holding on Broker
  uint64 poolId = 3 [
		(gogoproto.jsontag) = "pool_id"
	];
  // Broker Id for the Broker
  string brokerId = 4 [
		(gogoproto.jsontag) = "broker_id"
	];
  // the type of the asset. Valid types are spot, staked
  string type = 5 [
		(gogoproto.jsontag) = "asset_type"
	];
}

enum FundType {
  PASSIVE = 0;
  ACTIVE = 1;
}

message Fund {
  string symbol = 1;
  string address = 2;
  string name = 3; 
  string description = 4; 
  cosmos.base.v1beta1.Coin shares = 5 [
    (gogoproto.moretags) = "yaml:\"total_shares\"",
    (gogoproto.nullable) = true
  ];
  repeated Holding holdings = 6 [
    (gogoproto.moretags) = "yaml:\"holdings\"",
    (gogoproto.nullable) = true
  ];
  int64 rebalance = 7;
  BaseDenom baseDenom = 8 [
		(gogoproto.jsontag) = "base_denom"
	];
  cosmos.base.v1beta1.Coin startingPrice = 9 [
    (gogoproto.jsontag) = "starting_price",
    (gogoproto.moretags) = "yaml:\"starting_price\"",
    (gogoproto.nullable) = true
  ];
  string creator = 10;
  bool rebalancing = 11;
  int64  lastRebalanceHeight = 12 [
		(gogoproto.jsontag) = "last_rebalance_height"
	];
  FundBalances balances = 13 [
		(gogoproto.jsontag) = "balances"
	];
  // type of the fund. can only be active (wasm) or passive
  FundType fundType = 14 [
		(gogoproto.jsontag) = "fund_type"
	];
  string contract = 15 [
    (gogoproto.jsontag) = "contract",
    (gogoproto.moretags) = "yaml:\"contract\"",
    (gogoproto.nullable) = true
  ];
}

